--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
+title: Wei Yuan (Paul)
+description: Your Description
+twitter_username: paulyuan1219canada@gmail.com
+github_username: paulyuan1219canada@gmail.com
+theme: jekyll-theme-cayman
+
 theme: time-machine
