--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Wei Yuan (Paul)
 description: Your Description
-twitter_username: paulyuan1219canada@gmail.com
-github_username: paulyuan1219canada@gmail.com
+twitter_username: paulyuan1219canada
+github_username: paulyuan1219canada
 theme: jekyll-theme-cayman
 
 theme: time-machine
